[project]
name = "mvp-dfsb-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinícius Bodruch dos Santos",email = "viniciusbodruch2009@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "mvp_dfsb_backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
